manifests/mssql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql
  namespace: microfrontends
spec:
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2022-latest
        resources: {}
        ports:
        - name: sql
          containerPort: 1433

---

apiVersion: v1
kind: Service
metadata:
  name: mssql
  namespace: microfrontends
spec:
  selector:
    app: mssql
  ports:
  - port: 1433
    targetPort: 1433
