manifests/ocrmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr-manager
  namespace: microfrontends
spec:
  selector:
    matchLabels:
      app: ocr-manager
  template:
    metadata:
      labels:
        app: ocr-manager
    spec:
      containers:
      - name: ocr-manager
        image: nicolesilva.azurecr.io/ocr-manager:latest
        resources: {}
        ports:
        - name: http
          containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: ocr-manager
  namespace: microfrontends
spec:
  selector:
    app: ocr-manager
  ports:
  - port: 80
    targetPort: 80
