manifests/bcore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basecore
  namespace: microfrontends
spec:
  selector:
    matchLabels:
      app: basecore
  template:
    metadata:
      labels:
        app: basecore
    spec:
      containers:
      - name: basecore
        image: nicolesilva.azurecr.io/bcore:latest
        resources: {}
        ports:
        - name: http
          containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: basecore
  namespace: microfrontends
spec:
  selector:
    app: basecore
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basecore
  namespace: microfrontends
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Access-Control-Allow-Origin https://shell.vitorcorreia.me;
spec:
  ingressClassName: nginx
  rules:
  - host: bcore.vitorcorreia.me
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: basecore
            port: 
              number: 80
