manifests/fecore.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolithic-frontend
  namespace: microfrontends
spec:
  selector:
    matchLabels:
      app: monolithic-frontend
  template:
    metadata:
      labels:
        app: monolithic-frontend
    spec:
      containers:
      - name: monolithic-frontend
        image: nicolesilva.azurecr.io/fecore:#IMAGE_TAG#
        env: []
        resources: {}
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
          - mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
            name: nginx-config
      volumes:
        - name: nginx-config  
          configMap:
            name: frontend-nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf

---

apiVersion: v1
kind: Service
metadata:
  name: monolithic-frontend
  namespace: microfrontends
spec:
  selector:
    app: monolithic-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monolithic-frontend
  namespace: microfrontends
spec:
  ingressClassName: nginx
  rules:
  - host: monolithic-frontend.vitorcorreia.me
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: monolithic-frontend
            port: 
              number: 80
